# Project-PICIT

./: README.md
Reports/: Final Project Computer Engineering 1.docx
Visualization/examplePhotoshop/: New Text Document.txt
appFiles/cpp/: CMakeLists.txt  README.md  collage.cpp  collage.h  data.h  main.cpp  native-lib.cpp
appFiles/cpp/PhotomontageProject.xcodeproj/: project.pbxproj
appFiles/cpp/PhotomontageProject.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
appFiles/cpp/PhotomontageProject.xcodeproj/project.xcworkspace/xcuserdata/chana.xcuserdatad/: UserInterfaceState.xcuserstate
appFiles/cpp/PhotomontageProject.xcodeproj/xcuserdata/chana.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
appFiles/cpp/PhotomontageProject.xcodeproj/xcuserdata/chana.xcuserdatad/xcschemes/: xcschememanagement.plist
appFiles/cpp/maxflow/: block.h  graph.h
appFiles/java/com/example/trycpp/: MainActivity.java  SecondActivity.java  activity_algo_calculation.xml  activity_main.xml  activity_second.xml  algoCalculation.java
appFiles/res/layout/: activity_main.xml  activity_second.xml
appFiles/res/values/: strings.xml
helloWorld/: Hello_World.py
implement of article/: PhotoMontage.cpp  PhotoMontage.h
implement_of_articles/Photomontage/: CMakeLists.txt  Makefile  collage.cpp  collage.h  data.h  main.cpp
