CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)

FIND_PACKAGE(OpenCV REQUIRED)
PROJECT(PROJET)


ADD_EXECUTABLE(PROJET main.cpp data.h maxflow/graph.cpp collage.cpp collage.h)
TARGET_LINK_LIBRARIES(PROJET ${OpenCV_LIBS})